--- a/fresh-vite/package.json
+++ b/fresh-vite/package.json
@@ -10,7 +10,12 @@
     "preview": "npx vite preview"
   },
   "dependencies": {
+    "@dnd-kit/core": "^6.3.1",
+    "@dnd-kit/sortable": "^10.0.0",
+    "@firebase/app": "^0.13.1",
+    "@firebase/auth": "^1.10.7",
     "@google/generative-ai": "^0.24.1",
+    "@radix-ui/react-tooltip": "^1.2.7",
     "file-saver": "^2.0.5",
     "firebase": "^11.9.1",
     "framer-motion": "^10.16.16",
@@ -20,20 +25,20 @@
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.49.3",
     "react-icons": "^5.4.0",
-    "react-router-dom": "^6.22.0"
+    "react-router-dom": "^6.30.1"
   },
   "devDependencies": {
     "@eslint/js": "^9.11.0",
     "@types/react": "^18.2.48",
     "@types/react-dom": "^18.2.18",
-    "@vitejs/plugin-react": "^4.2.1",
-    "autoprefixer": "^10.4.21",
+    "@vitejs/plugin-react": "^4.5.2",
+    "autoprefixer": "^10.4.17",
     "eslint": "^9.11.0",
     "eslint-plugin-react-hooks": "^5.0.0",
     "eslint-plugin-react-refresh": "^0.4.5",
     "globals": "^15.12.0",
-    "postcss": "^8.5.6",
-    "tailwindcss": "^3.4.17",
+    "postcss": "^8.4.35",
+    "tailwindcss": "^3.4.1",
     "vite": "^5.0.12"
   }
 }
