--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
     "preview": "npx vite preview"
   },
   "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "^6.5.1",
+    "@fortawesome/free-solid-svg-icons": "^6.5.1",
     "@dnd-kit/core": "^6.3.1",
     "@dnd-kit/sortable": "^10.0.0",
     "@firebase/app": "^0.13.1",
