--- a/package.json
+++ b/package.json
@@ -7,7 +7,9 @@
     "dev": "npx vite",
     "build": "npx vite build",
     "lint": "eslint .",
-    "preview": "npx vite preview"
+    "preview": "npx vite preview",
+    "vercel-build": "npm run build",
+    "vercel-postinstall": "npm run build"
   },
   "dependencies": {
     "@fortawesome/fontawesome-svg-core": "^6.5.1",
